# open-rabbit

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
Parsers/: .gitignore  IMPLEMENTATION_GUIDE.md  README.md  analysis_reports.py  ast-parser.py  example_usage.py  examples.py  main.py  pipeline.py  pyproject.toml  test_pipeline.py  tree-sitter_builder.py  workflow.py
Parsers/ast_module/: __init__.py  ast_parser.py
Parsers/cfg/: cfg_builder.py
Parsers/client/: client.py
Parsers/examples/: semantic_example.py
Parsers/pdg/: pdg_builder.py
Parsers/samples/: test_sample.py
Parsers/semantic/: __init__.py
Parsers/worker/: worker.py
agent/: .env  main.py  pyproject.toml  unit_testPrompt.py
agent/parsers/: analysis_reports.py
agent/parsers/ast_module/: __init__.py
agent/services/: job_queue.py
agent/src/agent/: langfuse_integration.py  llm_factory.py
agent/src/agent/evaluators/: llm_judge.py
agent/src/agent/prompt/: __init__.py  unit_test_prompt.py
agent/src/agent/services/: cache.py  kb_client.py  sandbox_manager.py
agent/src/agent/subagents/: parser_agent.py
agent/src/agent/supervisor/: state.py
agent/src/agent/tools/web_search/: tools.py
agent/src/agent/utils/: smart_file_reader.py
agent/subagents/: base_agent.py
agent/tools/: gitClone.py  parserReports.py
agent/tools/web_search/: config.py
agent/utils/: __init__.py  token_utils.py
backend/: .dockerignore  .env.example  .gitignore  alembic.ini  dockerfile  e2b.Dockerfile  e2b.toml  main.py  pyproject.toml  server.py  test_agent_integration.py  test_bot_integration.py  test_e2b_sandbox.py  test_supervisor_workflow.py
backend/agent/: CODERABBIT_ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART_CODERABBIT.md  SYSTEM_DIAGRAM.md  __init__.py  coderabbit_client.py  coderabbit_workflow.py  examples_knowledge_base.py  llm_factory.py  logging_config.py  main.py  messageType.py  mock_llm.py  systemPrompt.py  test_workflow.py  visualize.py  workflow.py
backend/agent/evaluators/: __init__.py  custom_evaluators.py
backend/agent/examples/: agent_integration_example.py  example_parser_usage.py  test_parser_integration.py  unit_test_generation_example.py  workflow_usage_example.py
backend/agent/parsers/: __init__.py  pipeline.py
backend/agent/parsers/ast_module/: ast_parser.py
backend/agent/parsers/semantic/: __init__.py  semantic_builder.py
backend/agent/prompt/: __init__.py  comment_formatter_prompt.py  feedback_prompt.py  messageTypePrompt.py  review_prompt.py  systemPrompt.py  unit_testPrompt.py.bak
backend/agent/schemas/: __init__.py  comment_format.py  common.py  parser_output.py  review_output.py  test_output.py
backend/agent/services/: __init__.py  kb_client.py  sandbox_manager.py
backend/agent/subagents/: __init__.py  base_agent.py  comment_formatter_agent.py  feedback_agent.py  parser_agent.py  review_agent.py  unit_test_agent.py
backend/agent/supervisor/: __init__.py  config.py  intent_parser.py  kb_filter.py  reducer.py  result_aggregator.py  supervisor_agent.py
backend/agent/tools/: Parsers.py  __init__.py  diff_parser.py  file.py  fileDelete.py  fileSearch.py  fileUpdates.py  git.py  gitClone.py  knowledgeBase.py  package_intelligence.py  parserReports.py  sandbox_file.py  smart_file_reader.py  token_utils.py  web_search.py
backend/agent/tools/web_search/: __init__.py  brave_client.py
backend/alembic/: env.py
backend/alembic/versions/: 001_add_feedback_tables.py  002_add_review_tables.py  7c73d43efaf9_initial_migration.py  c3f7ba949ceb_add_agent_checkpoints_table.py
backend/db/: crud.py  database.py  models.py  schemas.py
backend/models/: __init__.py  bot.py  feedback.py
backend/routes/: __init__.py  bot_webhook.py  demo.py  events.py  feedback.py  pullRequest.py  user.py  user_feedback.py
backend/schemas/: api.py
backend/services/: github_comment_service.py  task_store.py
backend/src/backend/: main.py
backend/src/backend/db/: crud.py
backend/src/backend/repositories/: __init__.py  task_repository.py
backend/src/backend/routes/: __init__.py  bot.py  bot_webhook.py  events.py  feedback.py  user.py
backend/src/backend/schemas/: __init__.py  db.py
backend/src/backend/services/: __init__.py  github_comment_service.py  review_service.py  unit_test_service.py
backend/src/backend/utils/: __init__.py  language_detection.py
backend/test/: test_agent_integration.py  test_kb_workflow.py  test_server.py
bot/: .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.yml  package-lock.json  package.json  start.sh
bot/app/: index.ts
conf/: enable_ssl.sh  nginx.conf
docker/: backend.Dockerfile  bot.Dockerfile  knowledge-base.Dockerfile  web.Dockerfile
knowledge-base/: .env.example  .gitignore  Makefile  QUICKSTART.md  README.md  __init__.py  app.py  celery_app.py  config.py  docker-compose.yml  main.py  pyproject.toml  run.sh  tasks.py
knowledge-base/client/: client.py
knowledge-base/docs/: ARCHITECTURE.md  PROJECT_COMPLETE.md  QUICKREF.md  SETUP.md  SUMMARY.md
knowledge-base/elastic/: hybrid_search.py
knowledge-base/example/: example_usage.py
knowledge-base/index/: indexer.py
knowledge-base/scripts/: entrypoint.sh  example.py
knowledge-base/src/: __init__.py
knowledge-base/src/knowledge_base/: __init__.py  app.py  celery_app.py  main.py  tasks.py
knowledge-base/src/knowledge_base/elastic/: __init__.py  hybrid_search.py
knowledge-base/src/learnings/: __init__.py
knowledge-base/src/learnings/api/: __init__.py  main.py  routes.py
knowledge-base/src/learnings/core/: __init__.py  config.py  extractor.py  models.py  retriever.py  storage.py
knowledge-base/src/learnings/integrations/: __init__.py  langgraph_integration.py
knowledge-base/src/learnings/observability/: telemetry.py
knowledge-base/src/learnings/tasks/: __init__.py  celery_worker.py  ingestor.py
knowledge-base/worker/: worker.py
scripts/: enable_ssl.sh
vscode-extension/: CHANGELOG.md  README.md  package.json  pnpm-lock.yaml
web/: Dockerfile  middleware.ts  package.json  proxy.ts
(+53 files in other folders)
