[project]
name = "open-rabbit-agent"
version = "0.1.0"
description = "Multi-Agent Code Review System with Supervisor-Worker Architecture"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # LangChain ecosystem
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.9",
    "langchain-anthropic>=0.3.0",
    "langchain-elasticsearch>=0.3.0",
    "langgraph>=0.6.8",
    # Tree-sitter parsers
    "tree-sitter>=0.25.2",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    # LLM providers
    "openai>=1.60.0",
    # E2B sandbox
    "e2b-code-interpreter>=1.0.0",
    # Observability
    "langfuse>=3.11.2",
    # HTTP client
    "httpx>=0.28.1",
    # Data validation
    "pydantic>=2.11.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
    "__init__.py",
    "llm_factory.py",
    "langfuse_integration.py",
    "logging_config.py",
    "evaluators",
    "parsers",
    "prompt",
    "schemas",
    "services",
    "subagents",
    "supervisor",
    "tools",
    "utils",
]

[tool.hatch.build.targets.wheel.force-include]
"__init__.py" = "agent/__init__.py"
"llm_factory.py" = "agent/llm_factory.py"
"langfuse_integration.py" = "agent/langfuse_integration.py"
"logging_config.py" = "agent/logging_config.py"
"evaluators" = "agent/evaluators"
"parsers" = "agent/parsers"
"prompt" = "agent/prompt"
"schemas" = "agent/schemas"
"services" = "agent/services"
"subagents" = "agent/subagents"
"supervisor" = "agent/supervisor"
"tools" = "agent/tools"
"utils" = "agent/utils"



[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

