[project]
name = "open-rabbit-agent"
version = "0.1.0"
description = "Multi-Agent Code Review System with Supervisor-Worker Architecture"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Jagjeevan Kashid", email = "jagjeevandev97@gmail.com" }
]
dependencies = [
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.9",
    "langchain-anthropic>=0.3.0",
    "langchain-elasticsearch>=0.3.0",
    "langgraph>=0.6.8",
    "tree-sitter>=0.25.2",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "openai>=1.60.0",
    "e2b-code-interpreter>=1.0.0",
    "langfuse>=3.11.2",
    "httpx>=0.28.1",
    "pydantic>=2.11.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
