[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "dotenv>=0.9.9",
    "fastapi>=0.118.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.10",
    "sqlalchemy>=2.0.43",
    "langchain-openai>=0.3.35",
    "langgraph>=0.6.8",
    "uvicorn>=0.37.0",
]
