[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "dotenv>=0.9.9",
    "fastapi>=0.118.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.10",
    "sqlalchemy>=2.0.43",
    "langchain-openai>=0.3.9",
    "langchain-anthropic>=0.3.0",
    "langchain-elasticsearch>=0.3.0",
    "langgraph>=0.6.8",
    "uvicorn>=0.37.0",
    "httpx>=0.28.1",
    # Tree-sitter for code parsing
    "tree-sitter>=0.25.2",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    # OpenTelemetry
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-instrumentation-requests>=0.41b0",
    "opentelemetry-instrumentation-celery>=0.41b0",
    "opentelemetry-instrumentation-redis>=0.41b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.41b0",
    "opentelemetry-distro>=0.58b0",
    "opentelemetry-instrumentation>=0.58b0",
    "openai>=1.60.0",
]
