[project]
name = "open-rabbit-backend"
version = "0.1.0"
description = "Open Rabbit Backend API Server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Local agent package
    "open-rabbit-agent",
    # Backend-specific dependencies
    "alembic>=1.16.5",
    "dotenv>=0.9.9",
    "fastapi>=0.118.0",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.37.0",
    # OpenTelemetry (backend-specific observability)
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-instrumentation-requests>=0.41b0",
    "opentelemetry-instrumentation-celery>=0.41b0",
    "opentelemetry-instrumentation-redis>=0.41b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.41b0",
    "opentelemetry-distro>=0.58b0",
    "opentelemetry-instrumentation>=0.58b0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]

[project.scripts]
backend = "backend.main:main"

[tool.uv.sources]
open-rabbit-agent = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
