[project]
name = "open-rabbit-knowledge-base"
version = "0.1.0"
description = "A structured knowledge base for storing and retrieving code learnings"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-elasticsearch>=0.4.0",
    "langchain-openai>=0.3.35",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "celery>=5.4.0",
    "redis>=5.2.0",
    "pydantic-settings>=2.6.0",
    "requests>=2.32.0",
    "flower>=2.0.0",
    "langchain>=0.3.27",
    "elasticsearch>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/knowledge_base"]

[project.scripts]
knowledge-base = "knowledge_base.app:app"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
